8023173: FileDescriptor should respect append flag

Reviewed-by: martin, alanb, rriggs